--- a/external.css
+++ b/external.css
@@ -1,4 +1,71 @@
-label{
+body{
+    background-color: honeydew !important;
+}
+#username{
+    color: chartreuse;
+}
+.username_text{
+    color: indianred;
 
-    color
+}
+.radius{
+    border-radius: 27px;
+    padding: 5px;
+}
+#fieldset{
+    margin-bottom: 12px;
+    margin-top: 12px;
+    margin-left: 24px;
+    margin-right: 93px;
+}
+.redcolor{
+    color: red;
+    font-family: initial;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 900;
+    /* font-style: italic; */
+    /* text-decoration: line-through; */
+    /* text-decoration-style: dotted; */
+    text-decoration-color: blue;
+    /* color: darkgoldenrod; */
+   
+}
+.h1tag{
+
+    background-color: red;
+}
+.submit{
+    margin-top: 5px;
+    margin-left: 10px;
+    margin-right: -2px;
+    margin-bottom: 10px;
+    border-color: black;
+    border-style: solid;
+    border-width: 2px;
+    border-radius: 4px;
+}
+.name{
+
+    border: black solid;
+    height: 300px;
+    background-image: linear-gradient(
+-182deg
+, red, yellow);
+}
+.name1{
+    border: black solid;
+    height: 300px;
+    margin-top: 2px;
+    background-image: url("treesearch.gif");
+}
+.name2{
+
+    border: black solid;
+    height: 300px;
+    background-size: cover;
+    margin-top: 2px;
+    background-image: url("treesearch.gif");
+    width: 50%;
+
 }
