--- a/website.css
+++ b/website.css
@@ -86,3 +86,8 @@ img{
             margin-bottom: 1em;
             
 }
+#section-c{
+    background-color: #fff;
+    color: #333;
+    padding: 0 2em 0 2em;
+}
